Fixed WelcomePage css on mobile

--- a/src/css/WelcomePage.css
+++ b/src/css/WelcomePage.css
@@ -39,5 +39,6 @@
 @media (width <=768px) {
   .welcomePage h1 {
     font-size: 100px;
+    margin-bottom: 50px;
   }
 }
